feat: add RAG AI Agent research section to HTML dashboard

--- a/index.html
+++ b/index.html
@@ -14,9 +14,68 @@
             <p class="subtitle">追蹤 AI 世界的重要發展 • 完整時間軸</p>
             <div class="last-updated">最後更新：<span id="update-time"></span></div>
         </header>
+<main>
+            
+            <!-- RAG AI Agent Research -->
+            <section class="dashboard-section">
+                <h2>📅 2026-02-22</h2>
+                <p class="date-subtitle">AI Agent 架構研究與開源專案 (2026-02-22)</p>
+                
+                <div class="news-card">
+                    <h3>📚 最新 AI Agent 論文</h3>
+                    <ul>
+                        <li>
+                            <strong><a href="https://arxiv.org/abs/2601.01743" target="_blank">AI Agent Systems: Architectures, Applications, and Evaluation</a></strong>：Comprehensive survey of AI agent systems covering architectures, applications, and evaluation methodologies. Published in January 2026.
+                            <br><span class="source">來源：<a href="https://arxiv.org/abs/2601.01743" target="_blank">arXiv</a> • 2026-01-05</span>
+                        </li>
+                        <li>
+                            <strong><a href="https://arxiv.org/abs/2503.12687" target="_blank">AI Agents: Evolution, Architecture, and Real-World Applications</a></strong>：Examines the evolution, architecture, and practical applications of AI agents from early rule-based systems to modern sophisticated systems integrating large language models with dedicated modules for perception, planning, and tool use.
+                            <br><span class="source">來源：<a href="https://arxiv.org/abs/2503.12687" target="_blank">arXiv</a> • 2025-03-16</span>
+                        </li>
+                        <li>
+                            <strong><a href="https://arxiv.org/abs/2510.25445" target="_blank">Agentic AI: A Comprehensive Survey of Architectures, Applications, and Future Directions</a></strong>：Systematic PRISMA-based literature review of 90 studies, categorizing them using a dual-paradigm framework to trace research trends and evaluate architectures by their appropriate standards.
+                            <br><span class="source">來源：<a href="https://arxiv.org/abs/2510.25445" target="_blank">arXiv</a> • 2025-10-29</span>
+                        </li>
+                    </ul>
+                </div>
 
-        <main>
-            <!-- 2026-02-22 -->
+                <div class="news-card">
+                    <h3>💻 熱門開源專案</h3>
+                    <ul>
+                        <li>
+                            <strong><a href="https://github.com/crewAIInc/crewAI" target="_blank">crewAI</a></strong>：Framework for orchestrating role-playing, autonomous AI agents. Lean, lightning-fast Python framework built entirely from scratch, completely independent of LangChain or other agent frameworks.
+                            <br><span class="source">來源：<a href="https://github.com/crewAIInc/crewAI" target="_blank">GitHub</a> • 2026</span>
+                        </li>
+                        <li>
+                            <strong><a href="https://github.com/e2b-dev/awesome-ai-agents" target="_blank">awesome-ai-agents</a></strong>：A curated list of AI autonomous agents with multi-framework support and unified programming interface.
+                            <br><span class="source">來源：<a href="https://github.com/e2b-dev/awesome-ai-agents" target="_blank">GitHub</a> • 2026</span>
+                        </li>
+                        <li>
+                            <strong><a href="https://github.com/microsoft/agent-framework" target="_blank">Microsoft Agent Framework</a></strong>：Framework for building, orchestrating and deploying AI agents and multi-agent workflows with support for Python and .NET.
+                            <br><span class="source">來源：<a href="https://github.com/microsoft/agent-framework" target="_blank">GitHub</a> • 2026</span>
+                        </li>
+                        <li>
+                            <strong><a href="https://github.com/VoltAgent/voltagent" target="_blank">VoltAgent</a></strong>：AI Agent Engineering Platform built on an Open Source TypeScript AI Agent Framework.
+                            <br><span class="source">來源：<a href="https://github.com/VoltAgent/voltagent" target="_blank">GitHub</a> • 2026</span>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="news-card">
+                    <h3>🤗 Hugging Face 趨勢</h3>
+                    <ul>
+                        <li>
+                            <strong><a href="https://huggingface.co/blog/aufklarer/ai-trends-2026-test-time-reasoning-reflective-agen" target="_blank">Reflective Agents Trend</a></strong>：By 2026, robust agent toolkits where adding a new skill to your AI (e.g., 'connect to Salesforce') is as simple as installing a plugin. The agent can discover it and start using it securely and effectively.
+                            <br><span class="source">來源：<a href="https://huggingface.co/blog/aufklarer/ai-trends-2026-test-time-reasoning-reflective-agen" target="_blank">Hugging Face</a></span>
+                        </li>
+                        <li>
+                            <strong><a href="https://huggingface.co/learn/agents-course/en/unit0/introduction" target="_blank">Hugging Face AI Agents Course</a></strong>：Official course for learning how to build and deploy AI agents using Hugging Face tools and infrastructure.
+                            <br><span class="source">來源：<a href="https://huggingface.co/learn/agents-course/en/unit0/introduction" target="_blank">Hugging Face</a></span>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+<!-- 2026-02-22 -->
             <section class="dashboard-section">
                 <h2>📅 2026-02-22</h2>
                 <p class="date-subtitle">昨日 AI 大事件 (2026-02-21)</p>
