feat: add RAG AI Agent research section

--- a/index.html
+++ b/index.html
@@ -198,4 +198,4 @@
         document.getElementById('update-time').textContent = new Date().toLocaleString('zh-TW');
     </script>
 </body>
-</html>
+</html>force update
