feat: add RAG AI Agent research section in Traditional Chinese

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <p class="subtitle">追蹤 AI 世界的重要發展 • 完整時間軸</p>
             <div class="last-updated">最後更新：<span id="update-time"></span></div>
         </header>
-<main>
-            
+
+        <main>
             <!-- RAG AI Agent Research -->
             <section class="dashboard-section">
                 <h2>📅 2026-02-22</h2>
@@ -25,15 +25,15 @@
                     <h3>📚 最新 AI Agent 論文</h3>
                     <ul>
                         <li>
-                            <strong><a href="https://arxiv.org/abs/2601.01743" target="_blank">AI Agent Systems: Architectures, Applications, and Evaluation</a></strong>：Comprehensive survey of AI agent systems covering architectures, applications, and evaluation methodologies. Published in January 2026.
+                            <strong><a href="https://arxiv.org/abs/2601.01743" target="_blank">AI Agent 系統：架構、應用與評估</a></strong>：全面性調查 AI Agent 系統，涵蓋架構、應用和評估方法論。發表於 2026 年 1 月。
                             <br><span class="source">來源：<a href="https://arxiv.org/abs/2601.01743" target="_blank">arXiv</a> • 2026-01-05</span>
                         </li>
                         <li>
-                            <strong><a href="https://arxiv.org/abs/2503.12687" target="_blank">AI Agents: Evolution, Architecture, and Real-World Applications</a></strong>：Examines the evolution, architecture, and practical applications of AI agents from early rule-based systems to modern sophisticated systems integrating large language models with dedicated modules for perception, planning, and tool use.
+                            <strong><a href="https://arxiv.org/abs/2503.12687" target="_blank">AI Agents：演進、架構與實際應用</a></strong>：探討 AI Agents 從早期基於規則的系統到現代複雜系統的演進，這些系統整合大型語言模型與專用模組，用於感知、規劃和工具使用。
                             <br><span class="source">來源：<a href="https://arxiv.org/abs/2503.12687" target="_blank">arXiv</a> • 2025-03-16</span>
                         </li>
                         <li>
-                            <strong><a href="https://arxiv.org/abs/2510.25445" target="_blank">Agentic AI: A Comprehensive Survey of Architectures, Applications, and Future Directions</a></strong>：Systematic PRISMA-based literature review of 90 studies, categorizing them using a dual-paradigm framework to trace research trends and evaluate architectures by their appropriate standards.
+                            <strong><a href="https://arxiv.org/abs/2510.25445" target="_blank">Agentic AI：架構、應用與未來方向的全面性調查</a></strong>：基於 PRISMA 的系統性文獻回顧，涵蓋 90 項研究，使用雙重範式框架對研究趨勢進行分類並評估架構。
                             <br><span class="source">來源：<a href="https://arxiv.org/abs/2510.25445" target="_blank">arXiv</a> • 2025-10-29</span>
                         </li>
                     </ul>
@@ -43,19 +43,19 @@
                     <h3>💻 熱門開源專案</h3>
                     <ul>
                         <li>
-                            <strong><a href="https://github.com/crewAIInc/crewAI" target="_blank">crewAI</a></strong>：Framework for orchestrating role-playing, autonomous AI agents. Lean, lightning-fast Python framework built entirely from scratch, completely independent of LangChain or other agent frameworks.
+                            <strong><a href="https://github.com/crewAIInc/crewAI" target="_blank">crewAI</a></strong>：用於編排角色扮演自主 AI Agents 的框架。輕量級、超快速的 Python 框架，完全從零開始建構，獨立於 LangChain 或其他 Agent 框架。
                             <br><span class="source">來源：<a href="https://github.com/crewAIInc/crewAI" target="_blank">GitHub</a> • 2026</span>
                         </li>
                         <li>
-                            <strong><a href="https://github.com/e2b-dev/awesome-ai-agents" target="_blank">awesome-ai-agents</a></strong>：A curated list of AI autonomous agents with multi-framework support and unified programming interface.
+                            <strong><a href="https://github.com/e2b-dev/awesome-ai-agents" target="_blank">awesome-ai-agents</a></strong>：AI 自主 Agents 的精選列表，支援多框架和統一的程式設計介面。
                             <br><span class="source">來源：<a href="https://github.com/e2b-dev/awesome-ai-agents" target="_blank">GitHub</a> • 2026</span>
                         </li>
                         <li>
-                            <strong><a href="https://github.com/microsoft/agent-framework" target="_blank">Microsoft Agent Framework</a></strong>：Framework for building, orchestrating and deploying AI agents and multi-agent workflows with support for Python and .NET.
+                            <strong><a href="https://github.com/microsoft/agent-framework" target="_blank">Microsoft Agent Framework</a></strong>：用於建構、編排和部署 AI Agents 及多 Agent 工作流程的框架，支援 Python 和 .NET。
                             <br><span class="source">來源：<a href="https://github.com/microsoft/agent-framework" target="_blank">GitHub</a> • 2026</span>
                         </li>
                         <li>
-                            <strong><a href="https://github.com/VoltAgent/voltagent" target="_blank">VoltAgent</a></strong>：AI Agent Engineering Platform built on an Open Source TypeScript AI Agent Framework.
+                            <strong><a href="https://github.com/VoltAgent/voltagent" target="_blank">VoltAgent</a></strong>：基於開源 TypeScript AI Agent 框架建構的 AI Agent 工程平台。
                             <br><span class="source">來源：<a href="https://github.com/VoltAgent/voltagent" target="_blank">GitHub</a> • 2026</span>
                         </li>
                     </ul>
@@ -65,17 +65,18 @@
                     <h3>🤗 Hugging Face 趨勢</h3>
                     <ul>
                         <li>
-                            <strong><a href="https://huggingface.co/blog/aufklarer/ai-trends-2026-test-time-reasoning-reflective-agen" target="_blank">Reflective Agents Trend</a></strong>：By 2026, robust agent toolkits where adding a new skill to your AI (e.g., 'connect to Salesforce') is as simple as installing a plugin. The agent can discover it and start using it securely and effectively.
+                            <strong><a href="https://huggingface.co/blog/aufklarer/ai-trends-2026-test-time-reasoning-reflective-agen" target="_blank">反思型 Agents 趨勢</a></strong>：到 2026 年，將出現強大的 Agent 工具包，讓新增技能到你的 AI（例如「連接 Salesforce 並更新記錄」）就像安裝插件一樣簡單。Agent 可以自動發現並開始安全有效地使用它。
                             <br><span class="source">來源：<a href="https://huggingface.co/blog/aufklarer/ai-trends-2026-test-time-reasoning-reflective-agen" target="_blank">Hugging Face</a></span>
                         </li>
                         <li>
-                            <strong><a href="https://huggingface.co/learn/agents-course/en/unit0/introduction" target="_blank">Hugging Face AI Agents Course</a></strong>：Official course for learning how to build and deploy AI agents using Hugging Face tools and infrastructure.
+                            <strong><a href="https://huggingface.co/learn/agents-course/en/unit0/introduction" target="_blank">Hugging Face AI Agents 課程</a></strong>：學習如何使用 Hugging Face 工具和基礎設施建構和部署 AI Agents 的官方課程。
                             <br><span class="source">來源：<a href="https://huggingface.co/learn/agents-course/en/unit0/introduction" target="_blank">Hugging Face</a></span>
                         </li>
                     </ul>
                 </div>
             </section>
-<!-- 2026-02-22 -->
+
+            <!-- 2026-02-22 -->
             <section class="dashboard-section">
                 <h2>📅 2026-02-22</h2>
                 <p class="date-subtitle">昨日 AI 大事件 (2026-02-21)</p>
@@ -198,4 +199,4 @@
         document.getElementById('update-time').textContent = new Date().toLocaleString('zh-TW');
     </script>
 </body>
-</html>force update
+</html>
